package com.example.model;

public enum LocationType {
    STORE,
    RESTAURANT
}
