package com.example.service;

import java.util.List;
import com.example.model.Coordinates;
import com.example.model.Location;
import com.example.model.Route;

/**
 * Service class for map-related operations.
 */
public final class MapService {

    private final LocationService locationService;
    private final RouteStrategy routeStrategy;

    /**
     * Constructs a new MapService.
     *
     * @param locationService The location service to use.
     * @param routeStrategy The route strategy to use.
     */
    public MapService(final LocationService locationService, final RouteStrategy routeStrategy) {
        this.locationService = locationService;
        this.routeStrategy = routeStrategy;
    }

    /**
     * Finds the nearest location to a given point.
     *
     * @param point The coordinates to search from.
     * @return The nearest location, or null if not found.
     */
    public Location findNearestLocation(final Coordinates point) {
        // TODO: Implement findNearestLocation
        return null;
    }

    /**
     * Finds locations within a specified radius of a point.
     *
     * @param point The center point to search from.
     * @param radiusKm The radius to search within, in kilometers.
     * @return A list of locations within the specified radius.
     */
    public List<Location> findLocationsWithinRadius(final Coordinates point, final double radiusKm) {
        // TODO: Implement findLocationsWithinRadius
        return null;
    }

    /**
     * Calculates a route between two points.
     *
     * @param start The starting coordinates.
     * @param end The ending coordinates.
     * @return The calculated route.
     */
    public Route calculateRoute(final Coordinates start, final Coordinates end) {
        // TODO: Implement calculateRoute
        return null;
    }
}